terms & privacy pages

--- a/about.html
+++ b/about.html
@@ -245,29 +245,6 @@
 
         <footer class="footer">
             <div class="container">
-                <div class="wrap-our-footer our-contact">
-                    <div class="our-inner wow fadeInUp" data-wow-delay="0ms" data-wow-duration="1500ms">
-                        <div class="icon">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="36.999" height="34.001" viewBox="832 8786.003 36.999 34.001">
-                                <path d="M832.976 8820.004a.96.96 0 0 1-.67-.273.93.93 0 0 1-.278-.659l-.028-20.201v-.017a.927.927 0 0 1 .41-.754l5.321-3.617v-3.836a.94.94 0 0 1 .948-.932h6.066l5.218-3.546a.956.956 0 0 1 1.08 0l5.184 3.546h6.093a.94.94 0 0 1 .948.932v3.881l5.296 3.62c.19.131.315.316.373.52a.514.514 0 0 1 .033.184l.029 20.17a.94.94 0 0 1-.946.934l-35.077.048Zm2.772-1.869 29.478-.04-14.712-11.223-14.766 11.263Zm-1.827-.965 11.442-8.729-11.466-7.793.024 16.522Zm21.72-8.747 11.46 8.744-.023-16.565-11.438 7.821Zm-16.014-6.148 7.308 4.968 2.997-2.288a.963.963 0 0 1 1.15-.008l.012.008 2.978 2.271 7.3-4.992v-10.656h-21.745v10.697Zm-5.013-3.408 3.117 2.12v-4.238l-3.117 2.118Zm28.654 2.071 3.027-2.07-3.027-2.07v4.14Zm-15.189-11.223h4.829l-2.408-1.646-2.42 1.646Zm-3.995 12.301a.94.94 0 0 1-.947-.931.94.94 0 0 1 .947-.933h12.83a.94.94 0 0 1 .947.933.94.94 0 0 1-.946.931h-12.83Zm0-4.845a.94.94 0 0 1-.947-.933.94.94 0 0 1 .947-.932h12.83a.94.94 0 0 1 .947.932.94.94 0 0 1-.946.933h-12.83Z" fill="#fff" fill-rule="evenodd" data-name="icon"/>
-                            </svg>
-                        </div>
-                        <ul class="list-info">
-                            <li class="title">Our Email</li>
-                            <li class="sub-title"><a href="mailto:info@hasecuritysolutions.com">info@hasecuritysolutions.com</a></li>
-                        </ul>
-                    </div>
-                    <div class="our-inner wow fadeInUp" data-wow-delay="30ms" data-wow-duration="1500ms">
-                        <div class="icon">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="31" height="44.001" viewBox="1226 8782.001 31 44.001"><path d="m1240.596 8825.811-6.583-2.916-5.674 2.51a1.656 1.656 0 0 1-1.865-.356 1.633 1.633 0 0 1-.312-1.861l4.994-10.517a1.107 1.107 0 0 1 1.984-.023c.167.331.15.707-.013 1.01l-4.342 9.146 4.32-1.916a2.23 2.23 0 0 1 1.806 0l6.583 2.917h.011l6.585-2.917a2.226 2.226 0 0 1 1.804 0l4.32 1.916-4.343-9.148a1.095 1.095 0 0 1 .175-1.275 1.106 1.106 0 0 1 1.798.29l4.994 10.517c.3.63.177 1.36-.313 1.86s-1.222.64-1.864.357l-5.664-2.51-6.594 2.916a2.233 2.233 0 0 1-1.807 0Zm-1.946-7.6-9.548-15.926a13.891 13.891 0 0 1-1.562-6.474c.022-3.642 1.464-7.082 4.06-9.689a13.908 13.908 0 0 1 9.702-4.12 13.907 13.907 0 0 1 9.999 4 13.766 13.766 0 0 1 4.158 9.894 13.686 13.686 0 0 1-1.563 6.39l-9.547 15.926a3.294 3.294 0 0 1-2.85 1.61 3.296 3.296 0 0 1-2.85-1.61Zm2.683-34.012c-6.35.088-11.548 5.303-11.586 11.625a11.526 11.526 0 0 0 1.269 5.367l9.528 15.895c.293.488.766.54.956.54.19 0 .662-.052.955-.54l9.528-15.895a11.525 11.525 0 0 0 1.27-5.295c0-3.155-1.244-6.113-3.501-8.33a11.693 11.693 0 0 0-8.42-3.367Zm-4.884 11.697c0-2.772 2.265-5.027 5.05-5.027 2.785 0 5.052 2.255 5.052 5.027 0 2.772-2.267 5.027-5.051 5.027-2.786 0-5.05-2.255-5.05-5.027Zm2.206 0a2.842 2.842 0 0 0 2.845 2.832 2.841 2.841 0 0 0 2.844-2.832 2.84 2.84 0 0 0-2.844-2.831 2.841 2.841 0 0 0-2.845 2.831Z" fill="#fff" fill-rule="evenodd" data-name="icon"/>
-                            </svg>
-                        </div>
-                        <ul class="list-info">
-                            <li class="title">Our Address</li>
-                            <li class="sub-title"><a href="https://maps.app.goo.gl/28UTMHzPYNya4GDXA" target="_blank">12178 N 1450th Street Effingham, IL 62401</a></li>
-                        </ul>
-                    </div>
-                </div>
                 <div class="wrap-our-footer">
                     <div class="wrap-about">
                         <div class="logo-footer">
@@ -284,6 +261,10 @@
                                 <a href="https://www.linkedin.com/company/h-&-a-security-solutions" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
                             </li>
                         </ul>
+                        <div class="list-info">
+                            <a href="mailto:info@hasecuritysolutions.com">info@hasecuritysolutions.com</a>
+                            <a href="https://maps.app.goo.gl/28UTMHzPYNya4GDXA" target="_blank">12178 N 1450th Street Effingham, IL 62401</a>
+                        </div>
                     </div>
                     <div class="foo-col">
                         <h2 class="title-heading">QUICK LINKS</h2>
