--- a/contact.html
+++ b/contact.html
@@ -165,6 +165,10 @@
                                 <a href="https://www.linkedin.com/company/h-&-a-security-solutions" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
                             </li>
                         </ul>
+                        <div class="list-info">
+                            <a href="mailto:info@hasecuritysolutions.com">info@hasecuritysolutions.com</a>
+                            <a href="https://maps.app.goo.gl/28UTMHzPYNya4GDXA" target="_blank">12178 N 1450th Street Effingham, IL 62401</a>
+                        </div>
                     </div>
                     <div class="foo-col">
                         <h2 class="title-heading">QUICK LINKS</h2>
