fixed anchor tags

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                                         <h2 class="title-heading">EXTENDED DETECTION & RESPONSE (XDR)</h2>
                                         <p class="text">An advanced security solution that integrates multiple protection technologies to provide a holistic, unified approach towards threat detection, analysis, and response.</p>
                                         <div class="btn-holder">
-                                            <a href="services.html#xdr" class="btn btn-dark tab-link">MORE ON XDR <i class="icon fa fa-long-arrow-right"></i></a>
+                                            <a href="services.html#tab-section" class="btn btn-dark tab-link">MORE ON XDR <i class="icon fa fa-long-arrow-right"></i></a>
                                         </div>
                                     </div>
                                 </div>
@@ -156,7 +156,7 @@
                                         <h2 class="title-heading">MANAGED SECURITY OPERATIONS CENTER (MSOC)</h2>
                                         <p class="text">The Managed Security Operation Center is a cybersecurity service designed to ensure round-the-clock protection for your organization.</p>
                                         <div class="btn-holder">
-                                            <a href="services.html#msoc" class="btn btn-dark tab-link">MORE ON MSOC <i class="icon fa fa-long-arrow-right"></i></a>
+                                            <a href="services.html#tab-section" class="btn btn-dark tab-link">MORE ON MSOC <i class="icon fa fa-long-arrow-right"></i></a>
                                         </div>
                                     </div>
                                 </div>
@@ -178,7 +178,7 @@
                                         <h2 class="title-heading">MANAGED DETECTION & RESPONSE (MDR)</h2>
                                         <p class="text">A cybersecurity service that combines technology and human expertise to help organizations detect, analyze, and respond to cybersecurity threats.</p>
                                         <div class="btn-holder">
-                                            <a href="services.html#mdr" class="btn btn-dark tab-link">MORE ON MDR <i class="icon fa fa-long-arrow-right"></i></a>
+                                            <a href="services.html#tab-section" class="btn btn-dark tab-link">MORE ON MDR <i class="icon fa fa-long-arrow-right"></i></a>
                                         </div>
                                     </div>
                                 </div>
@@ -200,7 +200,7 @@
                                         <h2 class="title-heading">SECURITY INFORMATION & EVENT MANAGEMENT (SIEM)</h2>
                                         <p class="text">A robust cybersecurity solution that fuses advanced technology with human expertise to provide real-time analysis across your organization’s environment.</p>
                                         <div class="btn-holder">
-                                            <a href="services.html#siem" class="btn btn-dark tab-link">MORE ON SIEM <i class="icon fa fa-long-arrow-right"></i></a>
+                                            <a href="services.html#tab-section" class="btn btn-dark tab-link">MORE ON SIEM <i class="icon fa fa-long-arrow-right"></i></a>
                                         </div>
                                     </div>
                                 </div>
@@ -222,7 +222,7 @@
                                         <h2 class="title-heading">VULNERABILITY MANAGEMENT (VM)</h2>
                                         <p class="text">A scanning service designed to identify and assess potential security threats in an organization’s IT infrastructure.</p>
                                         <div class="btn-holder">
-                                            <a href="services.html#vm" class="btn btn-dark tab-link">MORE ON VM <i class="icon fa fa-long-arrow-right"></i></a>
+                                            <a href="services.html#tab-section" class="btn btn-dark tab-link">MORE ON VM <i class="icon fa fa-long-arrow-right"></i></a>
                                         </div>
                                     </div>
                                 </div>
