--- a/services.html
+++ b/services.html
@@ -16,9 +16,9 @@
 
 <body>
     <!-- Preloader -->
-    <!-- <div id="loading-overlay">
+    <div id="loading-overlay">
         <div class="loader"></div>
-    </div> -->
+    </div>
 
     <div class="wrapper services">
         <header class="header header-white">
